--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Home" />
     <title>Home</title>
     <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="../icon/css/all.min.css">
+    <link rel="stylesheet" href="icon/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
@@ -16,16 +16,16 @@
     <header>
         <div class="wrap-1">
             <nav class="navigation-bar">
-                <div class="home"><a href="../Home/home.html">Home</a></div>
-                <div class="about"><a href="../About/about.html">About</a></div>
-                <div class="library"><a href="../Library/library.html">library</a></div>
+                <div class="home"><a href="Home/home.html">Home</a></div>
+                <div class="about"><a href="About/about.html">About</a></div>
+                <div class="library"><a href="Library/library.html">library</a></div>
                 <div class="events">
                     <a id="click-event">Events
                         <i class="fas fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content" id="event-dropdown">
-                        <a href="../Live Discussion/live-discussion.html" id="live-discussion">Live Discussion</a>
-                        <a href="../Forum/forum.html" id="forum">Forum</a>
+                        <a href="Live Discussion/live-discussion.html" id="live-discussion">Live Discussion</a>
+                        <a href="Forum/forum.html" id="forum">Forum</a>
                     </div>
                 </div>
                 <div class="products">
@@ -33,14 +33,14 @@
                         <i class="fas fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content" id="product-dropdown">
-                        <a href="../Gift Card/gift-card.html"  id="gift-card">Gift Card</a>
-                        <a href="../Merchandise/merchandise.html" id="merchandise">Merchandise</a>
-                        <a href="../Gift Hamper/gift-hamper.html" id="gift-hamper">Gift Hamper</a>
+                        <a href="Gift Card/gift-card.html"  id="gift-card">Gift Card</a>
+                        <a href="Merchandise/merchandise.html" id="merchandise">Merchandise</a>
+                        <a href="Gift Hamper/gift-hamper.html" id="gift-hamper">Gift Hamper</a>
                     </div>
                 </div>
-                <div class="donate"><a href="../Donate/donate.html">Donate</a></div>
+                <div class="donate"><a href="Donate/donate.html">Donate</a></div>
                 <div class="package">
-                    <a href="../Package/package.html">Package
+                    <a href="Package/package.html">Package
                         <i class="fa-solid fa-gift"></i>
                     </a>   
                 </div>
@@ -49,27 +49,27 @@
         <div class="logo-div">
             <!-- <h1>Read It</h1>
             <i class="fa-solid fa-book-open-reader book-logo"></i> -->
-            <a href="../Home/home.html">
-                <img src="../Img/Screenshot 2024-02-24 at 2.27.58 PM.png" alt="ReadIt Logo" id="logo">
+            <a href="Home/home.html">
+                <img src="Img/Screenshot 2024-02-24 at 2.27.58 PM.png" alt="ReadIt Logo" id="logo">
             </a>
         </div>
         <div class="wrap-2">
             <div class="log-sign">
-                <div class="log-in"><a href="../Log In/log-in.html">Log In</a></div>
-                <div class="sign-up"><a href="../Sign Up/sign-up.html">Sign Up</a></div>
+                <div class="log-in"><a href="Log In/log-in.html">Log In</a></div>
+                <div class="sign-up"><a href="Sign Up/sign-up.html">Sign Up</a></div>
             </div>
             <i class="fa-solid fa-bars fa-2x" id="menu"></i>
             <nav class="navigation-bar navigation-bar-2" id="nav-2">
-                <div class="home"><a href="../Home/home.html">Home</a></div>
-                <div class="about"><a href="../About/about.html">About</a></div>
-                <div class="library"><a href="../Library/library.html">library</a></div>
+                <div class="home"><a href="Home/home.html">Home</a></div>
+                <div class="about"><a href="About/about.html">About</a></div>
+                <div class="library"><a href="Library/library.html">library</a></div>
                 <div class="events">
                     <a id="click-event">Events
                         <i class="fas fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-ul" id="event-list">
-                        <li><a href="../Live Discussion/live-discussion.html" id="live-discussion">Live Discussion</a></li>
-                        <li><a href="../Forum/forum.html" id="forum">Forum</a></li>
+                        <li><a href="Live Discussion/live-discussion.html" id="live-discussion">Live Discussion</a></li>
+                        <li><a href="Forum/forum.html" id="forum">Forum</a></li>
                     </ul>
                 </div>
                 <div class="products">
@@ -77,19 +77,19 @@
                         <i class="fas fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-ul" id="product-list">
-                        <li><a href="../Gift Card/gift-card.html"  id="gift-card">Gift Card</a></li>
-                        <li><a href="../Merchandise/merchandise.html" id="merchandise">Merchandise</a></li>
-                        <li><a href="../Gift Hamper/gift-hamper.html" id="gift-hamper">Gift Hamper</a></li>
+                        <li><a href="Gift Card/gift-card.html"  id="gift-card">Gift Card</a></li>
+                        <li><a href="Merchandise/merchandise.html" id="merchandise">Merchandise</a></li>
+                        <li><a href="Gift Hamper/gift-hamper.html" id="gift-hamper">Gift Hamper</a></li>
                     </ul>                                
                 </div>
-                <div class="donate"><a href="../Donate/donate.html">Donate</a></div>
+                <div class="donate"><a href="Donate/donate.html">Donate</a></div>
                 <div class="package">
-                    <a href="../Package/package.html">Package
+                    <a href="Package/package.html">Package
                         <i class="fa-solid fa-gift"></i>
                     </a>
                 </div>
-                <div class="log-in"><a href="../Log In/log-in.html">Log In</a></div>
-                <div class="sign-up"><a href="../Sign Up/sign-up.html">Sign Up</a></div> 
+                <div class="log-in"><a href="Log In/log-in.html">Log In</a></div>
+                <div class="sign-up"><a href="Sign Up/sign-up.html">Sign Up</a></div> 
             </nav>
         </div>
     </header>
@@ -100,18 +100,18 @@
                     <div class="intro-text">
                         <h3>Creating community through books</h3>
                         <p>Join the club, become a member and discuss</p>
-                        <a href="../Sign up/sign-up.html">
+                        <a href="Sign up/sign-up.html">
                             <button>Join Now</button>
                         </a>
                     </div>
-                    <img src="../Img/21929342.jpg" alt="Discussing books">
+                    <img src="Img/21929342.jpg" alt="Discussing books">
                 </div>
             </div>
         </section>
         <section>
             <div class="container-book-of-the-month">
                 <div class="book-of-the-month">
-                    <img src="../Img/Romance1.jpg" alt="Book of the month" class="book-img">
+                    <img src="Img/Romance1.jpg" alt="Book of the month" class="book-img">
                     <div class="book-of-the-month-content">
                         <p class="book-text">Book of the month</p>
                         <h3 class="book-name">P.S. I Still Love You</h3>
@@ -132,16 +132,16 @@
             <div class="featured-items-container">
                 <h2>Explore Our Club</h2>
                 <div class="featured-items">
-                    <a href="../Library/library.html">
-                        <img src="../Img/3632856.jpg" alt="Library" class="library">
+                    <a href="Library/library.html">
+                        <img src="Img/3632856.jpg" alt="Library" class="library">
                             <button>Discover New Books</button>
                     </a>
-                    <a href="../Live Discussion/live-discussion.html">
-                        <img src="../Img/49738974.jpg" alt="Discussion" class="discussion">
+                    <a href="Live Discussion/live-discussion.html">
+                        <img src="Img/49738974.jpg" alt="Discussion" class="discussion">
                         <button>Discuss With Others</button>
                     </a>
-                    <a href="../Forum/forum.html">
-                        <img src="../Img/Screenshot 2024-02-23 at 10.20.40 PM.png" alt="Forum" class="forum">
+                    <a href="Forum/forum.html">
+                        <img src="Img/Screenshot 2024-02-23 at 10.20.40 PM.png" alt="Forum" class="forum">
                         <button>Share Your Thoughts</button>
                     </a>
                 </div>
@@ -152,25 +152,25 @@
                 <h2>What's New?</h2>
                 <div class="new-books">
                     <div class="new-book">
-                        <img src="../Img/Romance3.jpg" alt="Book 1">
+                        <img src="Img/Romance3.jpg" alt="Book 1">
                         <h3>It Ends With Us</h3>
                         <p>February 2024</p>
                         <a href="https://allnovel.net/it-ends-with-us.html" target="_blank"><button class="read-now">Read Now</button></a>
                     </div>
                     <div class="new-book">
-                        <img src="../Img/Romance4.jpg" alt="Book 2">
+                        <img src="Img/Romance4.jpg" alt="Book 2">
                         <h3>Married By Morning <br>(The Hathaways)</h3>
                         <p>Janurary 2024</p>
                         <a href="https://allnovel.net/married-by-morning-the-hathaways-4.html" target="_blank"><button class="read-now">Read Now</button></a>
                     </div>
                     <div class="new-book">
-                        <img src="../Img/Romance2.jpg" alt="Book 3">
+                        <img src="Img/Romance2.jpg" alt="Book 3">
                         <h3>Mine Till Midnight <br>(The Hathaways)</h3>
                         <p>January 2024</p>
                         <a href="https://allnovel.net/mine-till-midnight-the-hathaways-1.html" target="_blank"><button class="read-now">Read Now</button></a>
                     </div>
                     <div class="new-book">
-                        <img src="../Img/Romance5.jpg" alt="Book 4">
+                        <img src="Img/Romance5.jpg" alt="Book 4">
                         <h3>Whitney My Love <br>(Westmoreland saga)</h3>
                         <p>December 2023</p>
                         <a href="https://allnovel.net/whitney-my-love-westmoreland-saga-2.html" target="_blank"><button class="read-now">Read Now</button></a>
@@ -183,18 +183,18 @@
                 <h2>What You Do Here?</h2>
                 <div class="join-learn-meet">
                     <div class="join">
-                        <img src="../Img/join.jpg" alt="Join">
+                        <img src="Img/join.jpg" alt="Join">
                         <h2 class="uppercase">Join</h2>
                         <p>Join up yourself or gift. Choose a membership to fit your learning goals & lifestyle. Go at your pace.</p>
                     </div>
                     <div class="learn">
-                        <img src="../Img/learn.jpg" alt="Learn">
+                        <img src="Img/learn.jpg" alt="Learn">
                         <h2 class="uppercase">Learn</h2>
                         <p>Every month members vote on a hotlist of 3 nonfiction books on a topic. We  nudge you weekly to read, listen or watch & join the discussion.</p>
                         <p>You don't have to read a book every month with us.</p>
                     </div>
                     <div class="meet">
-                        <img src="../Img/meet.jpg" alt="Meet">
+                        <img src="Img/meet.jpg" alt="Meet">
                         <h2 class="uppercase">Meet</h2>
                         <p>You will be invited to our monthly in-person & digital events (not another zoom room). Plus rebel coffees, learning goals support & shared interest groups.</p>
                     </div>
@@ -210,37 +210,37 @@
                             <h4>Engaging Discussions and Diverse Selections!</h4>
                             <p>I absolutely love being a part of the "Read It" book club! The discussions are thought-provoking, and the diverse range of book selections keeps things fresh and exciting. It's a welcoming community where book lovers come together to share their insights and perspectives. The organizers do an excellent job of curating a mix of genres, ensuring there's something for everyone. It's not just a book club; it's a literary journey that I look forward to every month.</p>
                             <div class="flex">
-                                <img src="../Img/Default_pfp.svg.png" alt="Default Photo">
+                                <img src="Img/Default_pfp.svg.png" alt="Default Photo">
                                 <div>
                                     <h4>Manda</h4>
                                     <p>Jan 22, 2024</p>
                                 </div>
                             </div>
-                            <img src="../Img/five-stars.jpeg" alt="5 stars review">
+                            <img src="Img/five-stars.jpeg" alt="5 stars review">
                         </div>
                         <div class="review">
                             <h4>Fantastic Community and Thoughtful Themes!</h4>
                             <p>Joining the "Read It" book club has been one of the best decisions for my reading life. The community is warm, friendly, and passionate about literature. What sets this book club apart is the careful selection of themes for each month. It adds an extra layer of depth to our discussions, and I've discovered hidden gems I might have overlooked on my own. The camaraderie and shared love for books make every meeting a joy. Highly recommend to any avid reader!</p>
                             <div class="flex">
-                                <img src="../Img/Default_pfp.svg.png" alt="Default Photo">
+                                <img src="Img/Default_pfp.svg.png" alt="Default Photo">
                                 <div>
                                     <h4>Aura</h4>
                                     <p>Feb 14, 2024</p>
                                 </div>
                             </div>
-                            <img src="../Img/five-stars.jpeg" alt="5 stars review">
+                            <img src="Img/five-stars.jpeg" alt="5 stars review">
                         </div>
                         <div class="review">
                             <h4>Inspiring and Well-Organized! </h4>
                             <p>"Read It" book club has become my literary haven. The organizers put so much thought into every aspect, from selecting compelling reads to facilitating engaging conversations. The structured yet relaxed format allows for meaningful discussions, and I've found myself inspired to explore genres I hadn't considered before. The sense of community is strong, and it's evident that everyone involved is genuinely passionate about the power of storytelling. It's not just a book club; it's a community of readers supporting and encouraging each other to dive into the wonderful world of literature.</p>
                             <div class="flex">
-                                <img src="../Img/Default_pfp.svg.png" alt="Default Photo">
+                                <img src="Img/Default_pfp.svg.png" alt="Default Photo">
                                 <div>
                                     <h4>Mare</h4>
                                     <p>Feb 23, 2024</p>
                                 </div>
                             </div>
-                            <img src="../Img/five-stars.jpeg" alt="5 stars review">
+                            <img src="Img/five-stars.jpeg" alt="5 stars review">
                         </div>
                     </div>
                 </div>
@@ -253,31 +253,31 @@
                 <div class="footer-wrap">
                     <div class="link">
                         <p>Quick Links</p>
-                        <a href="../Home/home.html">
+                        <a href="Home/home.html">
                             <p>Home</p>
                         </a>
-                        <a href="../About/about.html">
+                        <a href="About/about.html">
                             <p>About</p>
                         </a>
-                        <a href="../Contact Us/contact-us.html">
+                        <a href="Contact Us/contact-us.html">
                             <p>Contact Us</p>
                         </a>
-                        <a href="../Donate/donate.html">
+                        <a href="Donate/donate.html">
                             <p>Donate</p>
                         </a>
                     </div>
                     <div class="link">
                         <p>Products</p>
-                        <a href="../Gift Card/gift-card.html">
+                        <a href="Gift Card/gift-card.html">
                             <p>Gift Card</p>
                         </a>
-                        <a href="../Merchandise/merchandise.html">
+                        <a href="Merchandise/merchandise.html">
                             <p>Merchandise</p>
                         </a>
-                        <a href="../Gift Hamper/gift-hamper.html">
+                        <a href="Gift Hamper/gift-hamper.html">
                             <p>Gift Hamper</p>
                         </a>
-                        <a href="../Package/package.html">
+                        <a href="Package/package.html">
                             <p>Package</p>
                         </a>
                     </div>
@@ -285,13 +285,13 @@
                 <div class="footer-wrap">
                     <div class="link">
                         <p>Services</p>
-                        <a href="../Library/library.html">
+                        <a href="Library/library.html">
                             <p>Library</p>
                         </a>
-                        <a href="../Live Discussion/live-discussion.html">
+                        <a href="Live Discussion/live-discussion.html">
                             <p>Live Discussion</p>
                         </a>
-                        <a href="../Forum/forum.html">
+                        <a href="Forum/forum.html">
                             <p>Forum</p>
                         </a>
                     </div>
