--- a/Payment/payment.html
+++ b/Payment/payment.html
@@ -16,7 +16,7 @@
     <header>
         <div class="wrap-1">
             <nav class="navigation-bar">
-                <div class="home"><a href="../Home/home.html">Home</a></div>
+                <div class="home"><a href="../index.html">Home</a></div>
                 <div class="about"><a href="../About/about.html">About</a></div>
                 <div class="library"><a href="../Library/library.html">library</a></div>
                 <div class="events">
@@ -50,7 +50,7 @@
         <div class="logo-div">
             <!-- <h1>Read It</h1>
             <i class="fa-solid fa-book-open-reader book-logo"></i> -->
-            <a href="../Home/home.html">
+            <a href="../index.html">
                 <img src="../Img/Screenshot 2024-02-24 at 2.27.58 PM.png" alt="ReadIt Logo" id="logo">
             </a>
         </div>
@@ -61,7 +61,7 @@
             </div>
             <i class="fa-solid fa-bars fa-2x" id="menu"></i>
             <nav class="navigation-bar navigation-bar-2" id="nav-2">
-                <div class="home"><a href="../Home/home.html">Home</a></div>
+                <div class="home"><a href="../index.html">Home</a></div>
                 <div class="about"><a href="../About/about.html">About</a></div>
                 <div class="library"><a href="../Library/library.html">library</a></div>
                 <div class="events">
@@ -384,7 +384,7 @@
                 <div class="footer-wrap">
                     <div class="link">
                         <p>Quick Links</p>
-                        <a href="../Home/home.html">
+                        <a href="../index.html">
                             <p>Home</p>
                         </a>
                         <a href="../About/about.html">
