--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Home" />
     <title>Home</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="icon/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
-    <script src="home.js" defer></script>
+    <script src="index.js" defer></script>
 </head>
 <body>
     <header>
         <div class="wrap-1">
             <nav class="navigation-bar">
-                <div class="home"><a href="Home/home.html">Home</a></div>
+                <div class="home"><a href="index.html">Home</a></div>
                 <div class="about"><a href="About/about.html">About</a></div>
                 <div class="library"><a href="Library/library.html">library</a></div>
                 <div class="events">
@@ -49,7 +49,7 @@
         <div class="logo-div">
             <!-- <h1>Read It</h1>
             <i class="fa-solid fa-book-open-reader book-logo"></i> -->
-            <a href="Home/home.html">
+            <a href="index.html">
                 <img src="Img/Screenshot 2024-02-24 at 2.27.58 PM.png" alt="ReadIt Logo" id="logo">
             </a>
         </div>
@@ -60,7 +60,7 @@
             </div>
             <i class="fa-solid fa-bars fa-2x" id="menu"></i>
             <nav class="navigation-bar navigation-bar-2" id="nav-2">
-                <div class="home"><a href="Home/home.html">Home</a></div>
+                <div class="home"><a href="index.html">Home</a></div>
                 <div class="about"><a href="About/about.html">About</a></div>
                 <div class="library"><a href="Library/library.html">library</a></div>
                 <div class="events">
@@ -253,7 +253,7 @@
                 <div class="footer-wrap">
                     <div class="link">
                         <p>Quick Links</p>
-                        <a href="Home/home.html">
+                        <a href="index.html">
                             <p>Home</p>
                         </a>
                         <a href="About/about.html">
