--- a/About/about.html
+++ b/About/about.html
@@ -20,7 +20,7 @@
     <header>
         <div class="wrap-1">
             <nav class="navigation-bar">
-                <div class="home"><a href="../Home/home.html">Home</a></div>
+                <div class="home"><a href="../index.html">Home</a></div>
                 <div class="about"><a href="../About/about.html">About</a></div>
                 <div class="library"><a href="../Library/library.html">library</a></div>
                 <div class="events">
@@ -54,7 +54,7 @@
         <div class="logo-div">
             <!-- <h1>Read It</h1>
             <i class="fa-solid fa-book-open-reader book-logo"></i> -->
-            <a href="../Home/home.html">
+            <a href="../index.html">
                 <img src="../Img/Screenshot 2024-02-24 at 2.27.58 PM.png" alt="ReadIt Logo" id="logo">
             </a>
         </div>
@@ -65,7 +65,7 @@
             </div>
             <i class="fa-solid fa-bars fa-2x" id="menu"></i>
             <nav class="navigation-bar navigation-bar-2" id="nav-2">
-                <div class="home"><a href="../Home/home.html">Home</a></div>
+                <div class="home"><a href="../index.html">Home</a></div>
                 <div class="about"><a href="../About/about.html">About</a></div>
                 <div class="library"><a href="../Library/library.html">library</a></div>
                 <div class="events">
@@ -212,7 +212,7 @@
                 <div class="footer-wrap">
                     <div class="link">
                         <p>Quick Links</p>
-                        <a href="../Home/home.html">
+                        <a href="../index.html">
                             <p>Home</p>
                         </a>
                         <a href="../About/about.html">
