--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="intro-text">
                         <h3>Creating community through books</h3>
                         <p>Join the club, become a member and discuss</p>
-                        <a href="Sign up/sign-up.html">
+                        <a href="Sign Up/sign-up.html">
                             <button>Join Now</button>
                         </a>
                     </div>
