--- a/Copy/copy.html
+++ b/Copy/copy.html
@@ -5,33 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Home" />
     <title>Home</title>
-    <link rel="stylesheet" href="log-in.css">
+    <link rel="stylesheet" href="copy.css">
     <link rel="stylesheet" href="../icon/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
-    <script src="log-in.js" defer></script>
+    <script src="copy.js" defer></script>
 </head>
 <body>
     <header>
+        
+        <div class="logo-div">
+            <!-- <h1>Read It</h1>
+            <i class="fa-solid fa-book-open-reader book-logo"></i> -->
+            <a href="../index.html">
+                <img src="../Img/Screenshot 2024-02-24 at 2.27.58 PM.png" alt="ReadIt Logo" id="logo">
+            </a>
+        </div>
         <div class="wrap-1">
-            <nav class="navigation-bar">
+            <nav class="navigation-bar navigation-bar-1">
                 <div class="home"><a href="../index.html">Home</a></div>
                 <div class="about"><a href="../About/about.html">About</a></div>
                 <div class="library"><a href="../Library/library.html">library</a></div>
                 <div class="events">
-                    <a id="click-event">Events
-                        <i class="fas fa-caret-down"></i>
-                    </a>
+                    <a id="click-event">Events</a>
+                    <i class="fas fa-caret-down"></i>
                     <div class="dropdown-content" id="event-dropdown">
                         <a href="../Live Discussion/live-discussion.html" id="live-discussion">Live Discussion</a>
                         <a href="../Forum/forum.html" id="forum">Forum</a>
                     </div>
                 </div>
                 <div class="products">
-                    <a id="click-product">Products
-                        <i class="fas fa-caret-down"></i>
-                    </a>
+                    <a id="click-product">Products</a>
+                    <i class="fas fa-caret-down"></i>
                     <div class="dropdown-content" id="product-dropdown">
                         <a href="../Gift Card/gift-card.html"  id="gift-card">Gift Card</a>
                         <a href="../Merchandise/merchandise.html" id="merchandise">Merchandise</a>
@@ -40,19 +46,9 @@
                 </div>
                 <div class="donate"><a href="../Donate/donate.html">Donate</a></div>
                 <div class="package">
-                    <a href="../Package/package.html">Package
-                        <i class="fa-solid fa-gift"></i>
-                    </a>
-                    
+                    <a href="../Package/package.html">Package</a>      
                 </div>
             </nav>
-        </div>
-        <div class="logo-div">
-            <!-- <h1>Read It</h1>
-            <i class="fa-solid fa-book-open-reader book-logo"></i> -->
-            <a href="../index.html">
-                <img src="../Img/Screenshot 2024-02-24 at 2.27.58 PM.png" alt="ReadIt Logo" id="logo">
-            </a>
         </div>
         <div class="wrap-2">
             <div class="log-sign">
