--- a/index.html
+++ b/index.html
@@ -14,44 +14,65 @@
 </head>
 <body>
     <header>
-        <div class="wrap-1">
-            <nav class="navigation-bar">
-                <div class="home"><a href="index.html">Home</a></div>
-                <div class="about"><a href="About/about.html">About</a></div>
-                <div class="library"><a href="Library/library.html">library</a></div>
-                <div class="events">
-                    <a id="click-event">Events
-                        <i class="fas fa-caret-down"></i>
-                    </a>
-                    <div class="dropdown-content" id="event-dropdown">
-                        <a href="Live Discussion/live-discussion.html" id="live-discussion">Live Discussion</a>
-                        <a href="Forum/forum.html" id="forum">Forum</a>
-                    </div>
-                </div>
-                <div class="products">
-                    <a id="click-product">Products
-                        <i class="fas fa-caret-down"></i>
-                    </a>
-                    <div class="dropdown-content" id="product-dropdown">
-                        <a href="Gift Card/gift-card.html"  id="gift-card">Gift Card</a>
-                        <a href="Merchandise/merchandise.html" id="merchandise">Merchandise</a>
-                        <a href="Gift Hamper/gift-hamper.html" id="gift-hamper">Gift Hamper</a>
-                    </div>
-                </div>
-                <div class="donate"><a href="Donate/donate.html">Donate</a></div>
-                <div class="package">
-                    <a href="Package/package.html">Package
-                        <i class="fa-solid fa-gift"></i>
-                    </a>   
-                </div>
-            </nav>
-        </div>
         <div class="logo-div">
             <!-- <h1>Read It</h1>
             <i class="fa-solid fa-book-open-reader book-logo"></i> -->
             <a href="index.html">
                 <img src="Img/Screenshot 2024-02-24 at 2.27.58 PM.png" alt="ReadIt Logo" id="logo">
             </a>
+        </div>
+        <div class="wrap-1">
+            <nav class="navigation-bar">
+                <div class="home">
+                    <a href="index.html" class="nav-item-text">Home</a>
+                    <a href="index.html">
+                        <i class="fas fa-home"></i>
+                    </a>
+                </div>
+                <div class="about">
+                    <a href="About/about.html" class="nav-item-text">About</a>
+                    <a href="About/about.html">
+                        <i class="fa-solid fa-users"></i>
+                    </a>
+                </div>
+                <div class="library">
+                    <a href="Library/library.html" class="nav-item-text">library</a>
+                    <a href="Library/library.html">
+                        <i class="fa-solid fa-book-open"></i>
+                    </a>
+                </div>
+                <div class="events">
+                    <a id="click-event" class="nav-item-text">Events</a>
+                    <i class="fa-solid fa-calendar-days"></i>
+                    <i class="fas fa-caret-down"></i>
+                    <div class="dropdown-content" id="event-dropdown">
+                        <a href="Live Discussion/live-discussion.html" id="live-discussion">Live Discussion</a>
+                        <a href="Forum/forum.html" id="forum">Forum</a>
+                    </div>
+                </div>
+                <div class="products">
+                    <a id="click-product" class="nav-item-text">Products</a>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <i class="fas fa-caret-down"></i>
+                    <div class="dropdown-content" id="product-dropdown">
+                        <a href="Gift Card/gift-card.html"  id="gift-card">Gift Card</a>
+                        <a href="Merchandise/merchandise.html" id="merchandise">Merchandise</a>
+                        <a href="Gift Hamper/gift-hamper.html" id="gift-hamper">Gift Hamper</a>
+                    </div>
+                </div>
+                <div class="donate">
+                    <a href="Donate/donate.html" class="nav-item-text">Donate</a>
+                    <a href="Donate/donate.html">
+                        <i class="fa-solid fa-hand-holding-dollar"></i>
+                    </a>
+                </div>
+                <div class="package">
+                    <a href="Package/package.html" class="nav-item-text">Package</a> 
+                    <a href="Package/package.html">
+                        <i class="fa-solid fa-gift"></i>
+                    </a> 
+                </div>
+            </nav>
         </div>
         <div class="wrap-2">
             <div class="log-sign">
