--- a/test3.html
+++ b/test3.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class='outer-div'>
-        <div class='middle-div'>
+        <div class='middle-div' href="http://www.facebook.com">
           Test text
         </div>
       </div>
