--- a/index.html
+++ b/index.html
@@ -42,18 +42,22 @@
                     </a>
                 </div>
                 <div class="events">
-                    <a id="click-event" class="nav-item-text">Events</a>
-                    <i class="fa-solid fa-calendar-days"></i>
-                    <i class="fas fa-caret-down"></i>
+                    <div class="wrap-events">
+                        <a id="click-event" class="nav-item-text">Events</a>
+                        <i id="click-event-2" class="fa-solid fa-calendar-days"></i>
+                        <i id="click-event-3" class="fas fa-caret-down"></i>
+                    </div>
                     <div class="dropdown-content" id="event-dropdown">
                         <a href="Live Discussion/live-discussion.html" id="live-discussion">Live Discussion</a>
                         <a href="Forum/forum.html" id="forum">Forum</a>
                     </div>
                 </div>
                 <div class="products">
-                    <a id="click-product" class="nav-item-text">Products</a>
-                    <i class="fa-solid fa-cart-shopping"></i>
-                    <i class="fas fa-caret-down"></i>
+                    <div class="wrap-products">
+                        <a id="click-product" class="nav-item-text">Products</a>
+                        <i id="click-product-2" class="fa-solid fa-cart-shopping"></i>
+                        <i id="click-product-3" class="fas fa-caret-down"></i>
+                    </div>
                     <div class="dropdown-content" id="product-dropdown">
                         <a href="Gift Card/gift-card.html"  id="gift-card">Gift Card</a>
                         <a href="Merchandise/merchandise.html" id="merchandise">Merchandise</a>
