--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </a>
                 </div>
                 <div class="events">
-                    <div class="wrap-events">
+                    <div class="wrap-events" id="wrap-events">
                         <a id="click-event" class="nav-item-text">Events</a>
                         <i id="click-event-2" class="fa-solid fa-calendar-days"></i>
                         <i id="click-event-3" class="fas fa-caret-down"></i>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="products">
-                    <div class="wrap-products">
+                    <div class="wrap-products" id="wrap-products">
                         <a id="click-product" class="nav-item-text">Products</a>
                         <i id="click-product-2" class="fa-solid fa-cart-shopping"></i>
                         <i id="click-product-3" class="fas fa-caret-down"></i>
