--- a/Copy/copy.html
+++ b/Copy/copy.html
@@ -23,30 +23,59 @@
             </a>
         </div>
         <div class="wrap-1">
-            <nav class="navigation-bar navigation-bar-1">
-                <div class="home"><a href="../index.html">Home</a></div>
-                <div class="about"><a href="../About/about.html">About</a></div>
-                <div class="library"><a href="../Library/library.html">library</a></div>
+            <nav class="navigation-bar">
+                <div class="home">
+                    <a href="../index.html" class="nav-item-text">Home</a>
+                    <a href="../index.html">
+                        <i class="fas fa-home"></i>
+                    </a>
+                </div>
+                <div class="about">
+                    <a href="../About/about.html" class="nav-item-text">About</a>
+                    <a href="../About/about.html">
+                        <i class="fa-solid fa-users"></i>
+                    </a>
+                </div>
+                <div class="library">
+                    <a href="../Library/library.html" class="nav-item-text">library</a>
+                    <a href="../Library/library.html">
+                        <i class="fa-solid fa-book-open"></i>
+                    </a>
+                </div>
                 <div class="events">
-                    <a id="click-event">Events</a>
-                    <i class="fas fa-caret-down"></i>
+                    <div class="wrap-events" id="wrap-events">
+                        <a id="click-event" class="nav-item-text">Events</a>
+                        <i id="click-event-2" class="fa-solid fa-calendar-days"></i>
+                        <i id="click-event-3" class="fas fa-caret-down"></i>
+                    </div>
                     <div class="dropdown-content" id="event-dropdown">
                         <a href="../Live Discussion/live-discussion.html" id="live-discussion">Live Discussion</a>
                         <a href="../Forum/forum.html" id="forum">Forum</a>
                     </div>
                 </div>
                 <div class="products">
-                    <a id="click-product">Products</a>
-                    <i class="fas fa-caret-down"></i>
+                    <div class="wrap-products" id="wrap-products">
+                        <a id="click-product" class="nav-item-text">Products</a>
+                        <i id="click-product-2" class="fa-solid fa-cart-shopping"></i>
+                        <i id="click-product-3" class="fas fa-caret-down"></i>
+                    </div>
                     <div class="dropdown-content" id="product-dropdown">
                         <a href="../Gift Card/gift-card.html"  id="gift-card">Gift Card</a>
                         <a href="../Merchandise/merchandise.html" id="merchandise">Merchandise</a>
                         <a href="../Gift Hamper/gift-hamper.html" id="gift-hamper">Gift Hamper</a>
                     </div>
                 </div>
-                <div class="donate"><a href="../Donate/donate.html">Donate</a></div>
+                <div class="donate">
+                    <a href="../Donate/donate.html" class="nav-item-text">Donate</a>
+                    <a href="../Donate/donate.html">
+                        <i class="fa-solid fa-hand-holding-dollar"></i>
+                    </a>
+                </div>
                 <div class="package">
-                    <a href="../Package/package.html">Package</a>      
+                    <a href="../Package/package.html" class="nav-item-text">Package</a> 
+                    <a href="../Package/package.html">
+                        <i class="fa-solid fa-gift"></i>
+                    </a> 
                 </div>
             </nav>
         </div>
