--- a/Custom Package/custom-package.html
+++ b/Custom Package/custom-package.html
@@ -355,8 +355,8 @@
                 <label for="two-forum-discussion">Access to two review forums and discussion groups <span>(£19.99)</span></label>
             </div>
             <div class="forum-discussion-container">
-                <input type="radio" id="three-forum-discussion" name="forum-discussion">
-                <label for="three-forum-discussion">Access to all review forums and discussion groups <span>(£29.99)</span></label>
+                <input type="radio" id="all-forum-discussion" name="forum-discussion">
+                <label for="all-forum-discussion">Access to all review forums and discussion groups <span>(£29.99)</span></label>
             </div>
         </div>
         <div class="wrap total-price-wrap">
