--- a/test3.html
+++ b/test3.html
@@ -5,27 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div.outer-div {
-        height: 170px;
-        width: 300px;
-        background-color: lightgray;
-        position: relative;
-        }
-
-        div.middle-div {
-        position: absolute;
-        top: 50%;
-        -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-        }
+       
     </style>
 </head>
-<body>
-    <div class='outer-div'>
-        <div class='middle-div' href="http://www.facebook.com">
-          Test text
-        </div>
-      </div>
+<body> 
+  <input type="radio" id="element">
+  <script>
+    let yourElement = document.getElementById("element");
+    let isChecked = false;
+
+function toggleCheckedState() {
+    // If it was previously checked, uncheck it
+    if (isChecked) {
+        this.checked = false;
+        isChecked = false;
+    } else {
+        // If it was not previously checked, check it
+        this.checked = true;
+        isChecked = true;
+    }
+}
+
+// Assuming you're attaching the event listener to some element
+yourElement.addEventListener("click", toggleCheckedState);
+
+  </script>
 </body>
 </html>
