--- a/Donate/donate.html
+++ b/Donate/donate.html
@@ -141,7 +141,7 @@
                     <h3>Donation</h3>
                     <p>If you are interested in making a monetary donation, please follow the "Donate" button below. You will also be able to read about our campaign, and learn about the ways your generous contribution will help us put books in the hands and hearts of children in need.</p>
                     <div class="for-button">
-                        <a href="../Payment/payment.html"><button class="donate-now">Donate Now</button></a>
+                        <button class="donate-now">Donate Now</button>
                     </div>
                 </div>
             </div>
@@ -162,6 +162,19 @@
         <div class="final-container">
             <div class="final-text-container">
                 <p>Thank you to those who have donated books and money to support our mission.</p>
+            </div>
+        </div>
+        <div class="donation-wrapper">
+            <div class="donation">
+                <span class="close">&times;</span><br>
+                <h1>Make a donation</h1>
+                <p class="donation-text">to our Read It book club for many underprivileged children around the world</p>
+                <p class="enter-an-amount">Enter an amount</p>
+                <div class="donation-flex">
+                    <span>£</span><input type="number" min="0" value="1.00" class="donation-amount" id="donation-amount">
+                </div>
+                <p class="donation-notice" id="donation-notice"><i class="fa-solid fa-circle-exclamation"></i> Enter at least £1.00.</p>
+                <a href="../Payment/payment.html"><button class="donation-button donation-button-hover" id="donation-button">Donate</button></a>
             </div>
         </div>
     </main>
