--- a/Forum/forum.html
+++ b/Forum/forum.html
@@ -131,14 +131,14 @@
             </section>
             <section>
                 <div class="content-container" id="content-container">
-                    <form>
+                    <!-- <form>
                         <div class="post-message-container">
                             <input type="text" name="topic" id="topic" placeholder="Topic" required>
-                            <!-- <input type="file" name="file" id="file" placeholder="" required> -->
+                            <input type="file" name="file" id="file" placeholder="" required>
                             <textarea name="club-message" id="club-message" cols="30" rows="10" placeholder="Your Message" required></textarea>
                             <input type="submit" value="Post" id="post">
                         </div>
-                    </form>
+                    </form> -->
                     <div class="content">
                         <div class="flex">
                             <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
