--- a/test3.html
+++ b/test3.html
@@ -5,27 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-       .big {
-        position: fixed;
-        width:100%;
-        height: 1000px;
-        background-color: black;
-        z-index: 100;
-       }
-       .small {
-        background-color: firebrick;
-        width: 20%;
-        height: 20%;
-        z-index: -1;
-        position: fixed;
+       .sth {
+        width: 50px;
+        height: 50px;
+        background-color: red;
        }
     </style>
 </head>
 <body> 
-  <div class="big">
-    <div class="small"></div>
-  </div>
+  <button>Open Popup</button>
+  <dialog class="sth"></dialog>
   <script>
+    let something = document.querySelector(".sth");
+    document.querySelector("button").addEventListener("click", () => {
+      something.showModal();
+    });
   </script>
 </body>
 </html>
