--- a/Forum/forum.html
+++ b/Forum/forum.html
@@ -123,7 +123,7 @@
             <section>
                 <div class="sub-nav">
                     <div>
-                        <input type="search" placeholder="Search Forum Messages" class="search">
+                        <input type="search" placeholder="Search Usernames" class="search">
                         <button id="search">Search</button>
                     </div>
                     <button id="post-message">Post a new Message</button>
@@ -207,8 +207,283 @@
                         </div>
                         <p class="no-replies">No replies yet</p>
                     </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>David</b></p>
+                                <p>Feb 27, 2024 3:25 AM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance2.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>Mine Till Midnight</h4>
+                                <p>Just finished reading 'Mine Till Midnight' and oh my heart! The tension between Cam and Amelia had me swooning till the very end. Who else couldn't put it down?</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Ainz</b></p>
+                                <p>Feb 28, 2024 5:51 AM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance3.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>It Ends with Us</h4>
+                                <p>Can we talk about 'It Ends with Us' for a moment? This book hit me right in the feels. The raw emotions and complexities of Lily's journey had me in tears. Colleen Hoover really knows how to tug at your heartstrings.</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Naruto</b></p>
+                                <p>Feb 29, 2024 5:15 PM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance4.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>Married By Morning</h4>
+                                <p>I just finished 'Married By Morning' and I can't stop thinking about Leo and Catherine's love story. The way they challenge each other and grow together is everything I didn't know I needed in a romance novel.</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Sasuke</b></p>
+                                <p>March 1, 2024 2:22 PM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance5.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>Whitney, My Love</h4>
+                                <p>Whitney, My Love' has officially ruined me for all other romance novels. Clayton and Whitney's fiery chemistry had me glued to the pages. Judith McNaught truly knows how to deliver a timeless love story.</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Madara</b></p>
+                                <p>March 1, 2024 5:31 PM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance9.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>Always and Forever, Lara Jean</h4>
+                                <p>Can we just take a moment to appreciate 'Always and Forever, Lara Jean'? Lara Jean and Peter K's relationship is goals AF. Jenny Han has a way of capturing the magic of young love that's just unparalleled.</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Shalltear Bloodfallen</b></p>
+                                <p>March 2, 2024 2:30 AM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance10.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>The Wedding Date</h4>
+                                <p>Just picked up 'The Wedding Date' and I'm already hooked! The fake dating trope is one of my favorites, and Jasmine Guillory executes it flawlessly. Can't wait to see where Alexa and Drew's story takes me.</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Cocytus</b></p>
+                                <p>March 2, 2024 6:12 AM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance11.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>Blood Fury</h4>
+                                <p>Let's talk about 'Blood Fury' and 'Blood Vow' because these Black Dagger Legacy novels are consuming my soul. J.R. Ward never fails to deliver heart-pounding romance mixed with supernatural intrigue. Who else is obsessed with the Black Dagger Brotherhood?</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Mina</b></p>
+                                <p>March 2, 2024 8:54 AM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance12.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>Blood Vow</h4>
+                                <p>Currently diving into the world of 'Blood Fury' and I'm already captivated by Peyton and Novo's complicated dynamic. J.R. Ward keeps raising the stakes with each installment in the series. Can't wait to see what twists and turns await!</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Rose</b></p>
+                                <p>March 2, 2024 8:54 AM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance13.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>Blood Kiss</h4>
+                                <p>Alright folks, let's chat about 'Blood Kiss'! I just finished devouring this book, and I have to say, J.R. Ward never disappoints. The chemistry between Paradise and Craeg is off the charts, and the political intrigue kept me on the edge of my seat. Plus, can we talk about that cliffhanger ending? I need the next book ASAP!</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Ivy</b></p>
+                                <p>March 2, 2024 11:11 AM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance14.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>The Boy Who Sneaks in My Bedroom Window</h4>
+                                <p>Has anyone else read 'The Boy Who Sneaks in My Bedroom Window'? I stumbled upon this gem of a novel and couldn't put it down. The forbidden romance between Amber and Liam had me rooting for them from the start. It's a rollercoaster of emotions, but so worth the ride. Highly recommend!</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Alice</b></p>
+                                <p>March 2, 2024 7:14 PM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance15.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>Taking It All</h4>
+                                <p>Let's discuss 'Taking It All', shall we? Maya Banks knows how to steam up the pages with her erotic romance, and this book is no exception. The chemistry between Joss and Kylie is electric, and the emotional depth of their relationship had me hooked. Definitely a must-read for fans of the genre!</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Olivia</b></p>
+                                <p>March 3, 2024 4:14 AM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance16.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>Giving In</h4>
+                                <p>I just finished 'Giving In', and oh my, where do I even begin? Maya Banks has a way of weaving together passion and emotion that's utterly addictive. The love triangle between Chessy, Tate, and Damon had me torn, but in the best possible way. Can't wait to see how it all unfolds in the next installment!</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Amalia</b></p>
+                                <p>March 3, 2024 7:21 AM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance17.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>Letting Go</h4>
+                                <p>Let's take a moment to talk about 'Letting Go'. I don't know about you, but I couldn't put this book down. Maya Banks has crafted such a compelling story of love, loss, and redemption. The chemistry between Jace and Kylie is undeniable, and the emotional journey they embark on had me reaching for the tissues more than once. A definite must-read!</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>George</b></p>
+                                <p>March 3, 2024 3:57 AM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance18.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>Guardian Angel</h4>
+                                <p>Calling all romance aficionados! Have you read 'Guardian Angel' yet? This book has everything you could want in a romance novel: swoon-worthy heroes, strong heroines, and enough twists and turns to keep you guessing until the very end. I devoured it in one sitting and immediately wanted to reread it. Trust me, you won't be disappointed!</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Anna</b></p>
+                                <p>March 4, 2024 9:10 AM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance19.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>Seduce Me at Sunrise</h4>
+                                <p>Let's swoon over 'Seduce Me At Sunrise' together, shall we? Lisa Kleypas has outdone herself with this one. The slow-burn romance between Win and Merripen is utterly captivating, and the historical backdrop adds an extra layer of intrigue. I couldn't get enough of their love story, and I'm already itching to dive into the next book in the series!</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
+                    <div class="content">
+                        <div class="flex">
+                            <img src="../Img/Default_pfp.svg.png" alt="Default User" class="default-user">
+                            <div>
+                                <p><b>Bella</b></p>
+                                <p>March 5, 2024 7:18 AM</p>
+                            </div>
+                        </div>
+                        <div class="flex-2">
+                            <img src="../Book Collection/Romance20.jpg" alt="book" class="the-book">
+                            <div>
+                                <h4>The Gift</h4>
+                                <p>Who else has been enchanted by 'The Gift'? Julie Garwood has a way of transporting readers to another time and place with her richly drawn characters and vivid settings. The romance between Sara and Nathan is both heartwarming and passionate, and I found myself rooting for them every step of the way. If you're in the mood for a swoon-worthy historical romance, look no further!</p>
+                            </div>
+                        </div>
+                        <p class="no-replies">No replies yet</p>
+                    </div>
                 </div>
             </section>
+            <div class="view-more-container">
+                <button class="view-more">View More</button>
+            </div>
         </div>
     </main>
     <footer>
