--- a/Forum/forum.html
+++ b/Forum/forum.html
@@ -126,7 +126,8 @@
                         <input type="search" placeholder="Search Usernames" class="search">
                         <button id="search">Search</button>
                     </div>
-                    <button id="post-message">Post a new Message</button>
+                    <!-- <button id="post-message">Post a new Message</button> -->
+                    <button id="reset">Reset</button>
                 </div>
             </section>
             <section>
