--- a/Forum/forum.html
+++ b/Forum/forum.html
@@ -123,7 +123,7 @@
             <section>
                 <div class="sub-nav">
                     <div>
-                        <input type="search" placeholder="Search Usernames or Topics" class="search">
+                        <input type="search" placeholder="Search Names or Topics" class="search">
                         <button id="search">Search</button>
                     </div>
                     <!-- <button id="post-message">Post a new Message</button> -->
