--- a/Forum/forum.html
+++ b/Forum/forum.html
@@ -124,7 +124,7 @@
                 <div class="sub-nav">
                     <div>
                         <input type="search" placeholder="Search Names or Topics" class="search">
-                        <button id="search">Search</button>
+                        <!-- <button id="search">Search</button> -->
                     </div>
                     <!-- <button id="post-message">Post a new Message</button> -->
                     <button id="reset">Reset</button>
